--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.0",
+    "micro-cors": "^0.1.1",
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.2",
     "morgan": "1.10.0",
